--- a/styles/hp/styles.css
+++ b/styles/hp/styles.css
@@ -817,15 +817,19 @@ svg.icon-svg.icon-accent{
   background-size:cover;
 }
 
-.align-default-left .default-content-wrapper *{
+.align-default-left .default-content-wrapper, .align-default-left .default-content-wrapper *{
+  margin-right:auto !important;
   text-align:left !important;
 }
 
-.align-default-right .default-content-wrapper *{
+.align-default-right .default-content-wrapper, .align-default-right .default-content-wrapper *{
+  margin-left:auto !important;
   text-align:right !important;
 }
 
-.align-default-center .default-content-wrapper *{
+.align-default-center .default-content-wrapper, .align-default-center .default-content-wrapper *{
+  margin-left:auto !important;
+  margin-right:auto !important;
   text-align:center !important;
 }
 
